--- a/rmarkdown/rmarkdown.Rmd
+++ b/rmarkdown/rmarkdown.Rmd
@@ -1,5 +1,33 @@
 ---
-title: "rmarkdown"
-output: html_document
+title: "Untitled"
+author: "Jessamine Paula Orada"
+date: "2025-09-29"
+output: pdf_document
 ---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+```{r}
+  2 + 2
+```
+#1.a
+```{r}
+x<- -5:5
+  print(x)
+```
+#1.b
+```{r}
+  x <- 1:7
+
+print(x)
+```
+#2.a
+```{r}
+   seq(1, 3, by=0.2) # specify step size
+
+
+```
+
 
