--- a/rmarkdown/rmarkdown.Rmd
+++ b/rmarkdown/rmarkdown.Rmd
@@ -31,3 +31,31 @@ print(x)
 ```
 
 
+```{r}
+library(MASS)
+age <- c(34, 28, 22, 36, 27, 18, 52, 39, 42, 29, 35, 31, 27,22, 37, 34, 19, 20, 57, 49, 50, 37, 46, 25, 17, 37, 43, 53, 41, 51, 35,24,33, 41, 53, 40, 18, 44, 38, 41, 48, 27, 39, 19, 30, 61, 54, 58, 26,18)
+age[3]
+age[c(2,4)]
+age[-1]
+```
+
+```{r}
+   names(x)<- c("first"=3, "second"=0, "third"=9)
+     x [c("first", "third")]
+     print(x)
+```
+
+```{r}
+x<- -3:2
+  print(x)
+  x[2] <- 0
+   x
+```
+```{r}
+
+```
+
+
+
+
+
